--- a/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Inspection/Index.cshtml
@@ -282,6 +282,57 @@
         z-index: 9;
     }
 
+    #ReworkList {
+        width: 73vw;
+        height: 84vh;
+        position: absolute;
+        left: 15vw;
+        top: 10vh;
+        z-index: 1041;
+        background-color: white;
+        border: solid 1px black;
+        font-size: 1em;
+        font-weight: bold;
+        padding: 1em;
+    }
+
+    .ReworkListRowHeader {
+        color: black;
+        font-size: 1.1vw;
+        font-weight: bold;
+    }
+
+    .ReworkListTag {
+        width: 6vw;
+        float: left;
+    }
+
+        .ReworkListTag > div {
+            border: solid 1px black;
+            text-align: center;
+            background-color: lightgray;
+            cursor: pointer;
+        }
+            .ReworkListTag > div:hover {
+                background-color: gray;
+            }
+
+            .ReworkListTag > div.selectTag {
+                background-color: white;
+            }
+
+    .ReworkListTable {
+        width: 60vw;
+        height: 59vh;
+        float: left;
+    }
+
+        .ReworkListTable > table > tbody > tr > td > input[type='checkbox'] {
+            width: 3em;
+            height: 2em;
+            padding-top: 1.2em;
+        }
+
     #CFTComments {
         width: 73vw;
         height: 84vh;
@@ -794,8 +845,101 @@
         </div>
     </div>
 
-    <div id="ReworkList">
+    <div id="ReworkList" class="display-None">
+        <div>
+            <table style="width: 69vw;">
+                <tbody>
+                    <tr>
+                        <td align="left" valign="middle" style="width: 30%;">
+                            <p style="padding-left: 1em; font-size: 1.5em; font-weight: bold;">Rework List</p>
+                        </td>
+                        <td align="right" valign="middle">
+                            <input id="btnCFTCommentsExit" type="button" class="site-btn btn-gy font1rem" style="margin:0;border:0;padding: 7px 2em;" name="CFTCommentsExit" value="Exit" />
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="row ReworkListRowHeader">
+            <div class="col-auto"><p>SP no.</p></div>
+            <div class="col-auto"><select class="form-control" id="ReworkListSP" name="ReworkListSP"></select></div>
+            <div class="col-auto"><p>Style#</p></div>
+            <div class="col-auto"><select class="form-control" id="ReworkListStyle" name="ReworkListStyle"></select></div>
+            <div class="col-auto"><p>Article</p></div>
+            <div class="col-auto"><select class="form-control" id="ReworkListArticle" name="ReworkListArticle"></select></div>
+            <div class="col-auto"><p>Size</p></div>
+            <div class="col-auto"><select class="form-control" id="ReworkListSize" name="ReworkListSize"></select></div>
+        </div>
+        <div style="width: 70vw; height: 59vh; overflow: auto;">
+            <div class="ReworkListTag">
+                <div class="selectTag"><p>All</p></div>
+                <div><p>Quick</p></div>
+                <div><p>Hard</p></div>
+                <div><p>Wash</p></div>
+                <div><p>Relp.</p></div>
+                <div><p>Print</p></div>
+                <div><p>Shade</p></div>
+            </div>
+            <div class="ReworkListTable">
+                <table>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>Rework No</th>
+                            <th>SP#</th>
+                            <th>PO#</th>
+                            <th>Style#</th>
+                            <th>Size</th>
+                            <th>Article</th>
+                            <th>Defect</th>
+                            <th>Reworked</th>
+                            <th>Add Defect</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr idx="FixType">
+                            <td>
+                                <input type="checkbox" idx="InspectionID" class="ReworkListCheckBox">
+                            </td>
+                            <td>
+                                <input id="txtReworkListReworkNo" type="text" readonly="readonly" />
+                            </td>
+                            <td>
+                                <input id="txtReworkListOrderID" type="text" readonly="readonly" />
+                            </td>
+                            <td>
+                                <input id="txtReworkListPOID" type="text" readonly="readonly" />
+                            </td>
+                            <td>
+                                <input id="txtReworkListStyle" type="text" readonly="readonly" />
+                            </td>
+                            <td>
+                                <input id="txtReworkListSize" type="text" readonly="readonly" />
+                            </td>
+                            <td>
+                                <input id="txtReworkListArticle" type="text" readonly="readonly" />
+                            </td>
+                            <td>
+                                <input id="txtReworkListDefect" type="text" readonly="readonly" />
+                            </td>
+                            <td>
+                                <input id="btnReworkListPass" type="button" class="site-btn btn-green font1rem" style="margin:0;border:0;padding: 7px 2em;" name="ReworkListPass" value="Pass" />
+                            </td>
+                            <td>
+                                <input id="btnReworkListReject" type="button" class="site-btn btn-red font1rem" style="margin:0;border:0;padding: 7px 2em;" name="ReworkListReject" value="Reject" />
+                            </td>
+                            <td>
+                                <input id="btnReworkListAction" type="button" class="site-btn btn-blue font1rem" style="margin:0;border:0;padding: 7px 2em;" name="ReworkListAction" value="Action" />
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div>
 
+        </div>
     </div>
 
     <div id="CFTComments" class="display-None">
@@ -867,7 +1011,7 @@
             <div class="col-auto"><p>Article</p></div>
             <div class="col-auto"><p class="darkblue Article"></p></div>
             <div class="col-auto"><p>Size</p></div>
-            <div class="col-auto"><p class="darkblue Size"></p></div> 
+            <div class="col-auto"><p class="darkblue Size"></p></div>
         </div>
         <div>
             <table class="PictureDuringDummyFittingTable DefectTable">
@@ -928,7 +1072,7 @@
                                 <a id="aPictureSide" href="" data-source="" title="Picture Side" style="width:640px;height:480px;">
                                     <img id="PictureSide" style="width:20vw;" />
                                 </a>
-                            </div>                           
+                            </div>
                         </td>
                         <td>
                             <div class="zoom-gallery">
@@ -957,6 +1101,7 @@
         SwitchBindEvent();
         AddDefectBindEvent();
         ReworkCardBindEvent();
+        ReworkListBindEvent();
         CFTCommentsBindEvent();
         PictureDuringDummyFittingBindEvent();
         $('#SelectItemBackground').on('click', function () {
@@ -1133,7 +1278,8 @@
         });
 
         $('#btnReworkList').on('click', function () {
-            alert('open other page');
+            ReworkListGet();
+            $('$ReworkList').removeClass("display-None");
             $('#btnRefresh').click();
         });
 
@@ -1385,6 +1531,17 @@
             ReworkCardSave();
         });
 
+    }
+
+    function ReworkListBindEvent() {
+        $('.ReworkListTag>div').on('click', function () {
+            $('.ReworkListTag>div').removeClass("selectTag");
+            $(this).addClass("selectTag");
+        });
+
+        $('#btnCFTCommentsExit').on('click', function () {
+            $('$ReworkList').addClass("display-None");
+        });
     }
 
     function CFTCommentsBindEvent() {
@@ -2076,6 +2233,48 @@
                 else {
                     msg.WithError(data.ErrMsg);
                 }
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                console.log(xhr.responseText);
+            }
+        });
+    }
+
+    function ReworkListGet() {
+        $.ajax({
+            url: "@Url.Action("GetReworkList", "Inspection", new { Area = "SampleRFT" })",
+            type: 'POST',
+            contentType: "application/json; charset=utf-8",
+            data: JSON.stringify({ }),
+            async: true,
+            success: function (data) {
+                var tableContent;
+                var spOption, styleOption, articleOption, sizeOption;
+                $.each(data, function (index, value) {
+                    spOption += "<option value=" + value.OrderID + ">" + value.OrderID + "</option>";
+                    styleOption += "<option value=" + value.Style + ">" + value.Style + "</option>";
+                    articleOption += "<option value=" + value.Article + ">" + value.Article + "</option>";
+                    sizeOption += "<option value=" + value.Size + ">" + value.Size + "</option>";
+
+                    tableContent += "<tr idx='" + value.FixType + "'>";
+                    tableContent += "<td><input type='checkbox' idx='" + value.ID + "' class='ReworkListCheckBox'></td>";
+                    tableContent += "<td><input id='txtReworkListOrderID" + value.ID + "' type='text' readonly='readonly' /></td>";
+                    tableContent += "<td><input id='txtReworkListPOID" + value.ID + "' type='text' readonly='readonly' /></td>";
+                    tableContent += "<td><input id='txtReworkListStyle" + value.ID + "' type='text' readonly='readonly' /></td>";
+                    tableContent += "<td><input id='txtReworkListSize" + value.ID + "' type='text' readonly='readonly' /></td>";
+                    tableContent += "<td><input id='txtReworkListArticle" + value.ID + "' type='text' readonly='readonly' /></td>";
+                    tableContent += "<td><input id='txtReworkListDefect" + value.ID + "' type='text' readonly='readonly' /></td>";
+                    tableContent += "<td><input id='btnReworkListPass" + value.ID + "' type='button' class='site-btn btn-green font1rem btnReworkListPass' style='margin: 0; border: 0; padding: 7px 2em; ' name='ReworkListPass' value='Pass' /></td>";
+                    tableContent += "<td><input id='btnReworkListReject" + value.ID + "' type='button' class='site-btn btn-red font1rem btnReworkListReject' style='margin:0;border:0;padding: 7px 2em;' name='ReworkListReject' value='Reject' /></td>";
+                    tableContent += "<td><input id='btnReworkListAction" + value.ID + "' type='button' class='site-btn btn-blue font1rem btnReworkListAction' style='margin:0;border:0;padding: 7px 2em;' name='ReworkListAction' value='Action' /></td>";
+                    tableContent += "</tr>";
+                }); 
+
+                $('#ReworkListTable>tbody').html(tableContent);
+                $("#ReworkListSP").html(spOption);
+                $("#ReworkListStyle").html(styleOption);
+                $("#ReworkListArticle").html(articleOption);
+                $("#ReworkListSize").html(sizeOption);
             },
             error: function (xhr, ajaxOptions, thrownError) {
                 console.log(xhr.responseText);
