--- a/Quality/Quality/Views/Shared/_Layout.cshtml
+++ b/Quality/Quality/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
     <script src="~/ThirdParty/plugins/jquery-datepicker/Datepicker.js"></script>
     <script src="~/ThirdParty/SciCustom/js/jquery-ui.min.js"></script>
     <script src="~/ThirdParty/SciCustom/js/main.js"></script>
+    <script src="~/ThirdParty/plugins/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
+
+    @RenderSection("head", required: false)
 
     <title>Quality Web</title>
 
