新增一層For All Final Inspection的Layout

--- a/Quality/Quality/Areas/FinalInspection/Views/Shared/_Inspection_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Shared/_Inspection_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/FinalInspection/Views/Shared/_ForAll_Layout.cshtml";
 }
 
 <h2>Inspection 逐步的共用區域寫在這</h2>
