--- a/Quality/Quality/Areas/Authority/Views/UserList/Index.cshtml
+++ b/Quality/Quality/Areas/Authority/Views/UserList/Index.cshtml
@@ -113,7 +113,7 @@
                                         @Html.DisplayFor(modelItem => item.Position)
                                     </td>
                                     <td>
-                                        <img onclick="Edit_Pic_Click('@item.UserID')" style="width:1.2vw;cursor:pointer;" src="~/ThirdParty/SciCustom/icon/Edit.png" />
+                                        <img onclick="Edit_Pic_Click('@item.UserID')" style="width:1.2vw;cursor:pointer;" src="~/Image/Icon/Edit.png" />
                                     </td>
                                 </tr>
                             }
