--- a/Quality/Quality/Areas/SampleRFT/Views/BACriteria/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/BACriteria/Index.cshtml
@@ -69,11 +69,11 @@
 
     <header class="page-header">
         <h3>
-            <i class=""></i><span>Style Result</span>
+            <i class=""></i><span>BA Criteria</span>
         </h3>
         <div class="breadcrumb">
             <div>Home</div>
-            <div class="current">Style Result</div>
+            <div class="current">BA Criteria</div>
         </div>
     </header>
 
