--- a/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
@@ -5,5 +5,194 @@
 }
 
 @model RFT_PicDuringDummyFitting_ViewModel
-<h2>Index</h2>
 
+
+
+<link href="~/ThirdParty/plugins/DataTables/datatables.min.css" rel="stylesheet" />
+<link href="~/ThirdParty/SciCustom/css/TableStyle.css" rel="stylesheet" />
+<link href="~/ThirdParty/plugins/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+<script src="~/ThirdParty/plugins/DataTables/datatables.min.js"></script>
+
+<style type="text/css">
+    .dataTables_wrapper {
+        position: static;
+    }
+
+    h3, label, #myTable_info {
+        color: white
+    }
+
+    #myTable_previous, #myTable_next {
+        color: white !important;
+    }
+
+    #moduleTable_previous, #moduleTable_next {
+        color: white !important;
+    }
+
+    #UsersTable_previous, #UsersTable_next {
+        color: white !important;
+    }
+
+    select {
+        color: wheat
+    }
+
+    .btnmargin {
+        margin-left: 10px;
+        margin-top: 10px;
+    }
+
+    tfoot input {
+        width: 100%;
+        padding: 3px;
+        box-sizing: border-box;
+    }
+
+    .input_Head {
+        /*height: 3vh;*/
+        height: 89%;
+        width: 95%;
+        font-weight: 300 !important;
+        color: #656565;
+        font-size: 0.5em !important;
+    }
+
+    .detail_Head {
+        width: 95%;
+    }
+</style>
+<div class="main-content">
+
+    <header class="page-header">
+        <h3>
+            <i class=""></i><span>Pictures During Dummy Fitting</span>
+        </h3>
+        <div class="breadcrumb">
+            <div>Home</div>
+            <div class="current">Pictures During Dummy Fitting</div>
+        </div>
+    </header>
+
+
+    <div class="main-area">
+
+        <div class="content-scroll">
+            <div class="inner-scroll" style="float:left">
+
+                <div>
+                    @using (Html.BeginForm("Query", ViewContext.RouteData.GetRequiredString("Controller"), FormMethod.Post, new { @class = "", @name = "SearchFrom", @onsubmit = "return checkForm(this);", @id = "SearchFrom" }))
+                    {
+                        <div>
+                            <label class="QueryLab">SP#</label>
+                            @*<input type="text" name="OrderID" id="txtOrderID" />*@
+                            @Html.TextBoxFor(o => o.OrderID)
+                            &nbsp;&nbsp;
+                            <label class="QueryLab">Style</label>
+                            @Html.TextBoxFor(o => o.StyleID, new { @readonly = "readonly" })
+                            &nbsp;&nbsp;
+                            <label class="QueryLab">Sample stage</label>
+                            @Html.TextBoxFor(o => o.OrderTypeID, new { @readonly = "readonly" })
+                            &nbsp;&nbsp;
+                            <label class="QueryLab">Season</label>
+                            @Html.TextBoxFor(o => o.SeasonID, new { @readonly = "readonly" })
+                            &nbsp;&nbsp;
+                            <input type="submit" name="name" id="btnQuery" value="Query" />
+                        </div>
+                    }
+                </div>
+                <br />
+                <div>
+
+                    <table id="myTable" class="table table-striped display" style="text-align:center">
+                        <thead>
+                            <tr class="row-name">
+                                <th>Article</th>
+                                <th>Size</th>
+                                <th>Front View</th>
+                                <th>Side View</th>
+                                <th>Back View</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.DataList)
+                            {
+                                <tr class="row-content">
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Article)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Size)
+                                    </td>
+                                    <td>
+                                        @*@Html.DisplayFor(modelItem => item.Front)*@
+                                        <img id="PictureFront" style="width:20vw;" src="data:image/webp;base64,@item.Front" />
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Side)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Back)
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+                <br />
+
+            </div>
+        </div>
+    </div>
+
+
+</div>
+
+
+
+<script type="text/javascript">
+
+    var msg = new MessagerAlert();
+
+    $(function () {
+
+
+        @Html.Raw(Model.ErrorMessage);
+
+        $('#myTable').DataTable({
+            "pageLength": 20,
+            initComplete: function () {
+            }
+        });
+
+
+        $("#OrderID").blur(function () {
+            $.ajax({
+                url: '@Url.Action("CheckOrder")',
+                data: { OrderID: $(this).val() },
+                type: 'POST',
+                dataType: "json",
+                async: false,
+                success: function (res) {
+
+                    if (res.Result) {
+                        // 表頭塞值
+                        $("#StyleID").val(res.StyleID);
+                        $("#OrderTypeID").val(res.OrderTypeID);
+                        $("#SeasonID").val(res.SeasonID);
+
+                    }
+                    else {
+                        msg.WithErrorCheck(res.ErrorMessage, function () {
+                            location.reload();
+                        });
+                    }
+
+                }
+            });
+        });
+
+    });
+
+
+</script>
