--- a/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/Index.cshtml
@@ -1,7 +1,19 @@
 ﻿
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
 
+
+
+<input id="Download" type="button" name="" value="Download" />
+
+
+<script>
+    $(function () {
+        $("#Download").click(function () {
+            location.href = '@Url.Action("DownLoad")';
+        });
+    });
+</script>
