--- a/Quality/Quality/Views/PublicWondow/TPESuppList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/TPESuppList.cshtml
@@ -2,13 +2,16 @@
 
 @{
     Layout = null;
+    string title = ViewData["Title"] == null ? "TPESupp" : ViewData["Title"].ToString();
 }
 
-@model List<Window_Technician>
+@model List<Window_TPESupp>
 
-<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script src="~/Scripts/jquery-3.5.1.min.js"></script>
+
 <link href="~/ThirdParty/plugins/DataTables/datatables.min.css" rel="stylesheet" />
 <link href="~/ThirdParty/SciCustom/css/TableStyle.css" rel="stylesheet" />
+
 <script src="~/ThirdParty/plugins/DataTables/datatables.min.js"></script>
 
 <style>
@@ -40,11 +43,11 @@
 </style>
 
 <fieldset style="width:900px;height:700px;">
-    <legend>Technician</legend>
-    @using (Html.BeginForm("TechnicianList", ViewContext.RouteData.GetRequiredString("Controller"), new { }, FormMethod.Post, new { @width = "100%", @height = "5%", @style = "margin-bottom:10px;" }))
+    <legend>@title</legend>
+    @using (Html.BeginForm("TPESuppList", ViewContext.RouteData.GetRequiredString("Controller"), new { }, FormMethod.Post, new { @width = "100%", @height = "5%", @style = "margin-bottom:10px;" }))
     {
-        <input type="text" name="ID" value="" />
-        @Html.Hidden("CallFunction", ViewData["CallFunction"]);
+        <input type="text" name="Name" value="" />
+        @Html.Hidden("Title", title);
         <input type="submit" value="Query" />
         <input id="btnExit" type="button" value="Exit" />
     }
@@ -54,9 +57,8 @@
             <thead>
                 <tr>
                     <th>ID</th>
+                    <th>Abb</th>
                     <th>Name</th>
-                    <th>ExtNo</th>
-                    <th>Factory</th>
                 </tr>
             </thead>
             <tbody>
@@ -65,9 +67,8 @@
                     <tr>
 
                         <td>@item.ID</td>
+                        <td>@item.Abb</td>
                         <td>@item.Name</td>
-                        <td>@item.ExtNo</td>
-                        <td>@item.Factory</td>
                     </tr>
                 }
             </tbody>
@@ -90,16 +91,16 @@
         $('#MyTable tbody').on('click', 'tr', function (data, type, full, meta) {
 
             // 取得整個Row
-            var TechnicianData = table.row(this).data();
+            var TPESuppData = table.row(this).data();
 
-            var Technician = {
-                ID: TechnicianData[0],
-                Name: TechnicianData[1],
-                ExtNo: TechnicianData[2],
+            var TPESupp = {
+                ID: TPESuppData[0],
+                Name: TPESuppData[1],
+                ExtNo: TPESuppData[2],
             }
 
-            // 呼叫父視窗的GetTechnician Function，把物件傳回去
-            window.opener.GetTechnician(Technician);
+            // 呼叫父視窗的GetTPESupp Function，把物件傳回去
+            window.opener.GetTPESupp(TPESupp);
 
             window.close();
         });
